[metadata]
name = homeassistant-experiabox-v10a
author = Frank ZZ
description = ExperiaBox V10A custom device_tracker component
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
version = 0.2.1
url = https://github.com/stijnb1234/homeassistant-experiabox-v10a
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Environment :: Console
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Home Automation
license_files = LICENSE

[options]
packages = find:
python_requires = >= 3.9
